# BL3-SDK-Mods

./: PhaseflareFix.sdkmod  pyproject.toml
BlastJumping/: BlastJumping.sdkmod  __init__.py  pyproject.toml
ColdDeadHands/: ColdDeadHands.sdkmod  __init__.py  assaultrifles.py  common.py  heavyweapons.py  itempools.py  legitbaldefs.py  options.py  pistols.py  pyproject.toml  shotguns.py  snipers.py  submachineguns.py
CutsceneDisabler/: CutsceneDisabler.sdkmod  __init__.py  pyproject.toml
GuardianVaultCardDisabler/: GuardianVaultCardDisabler.sdkmod  __init__.py  pyproject.toml
HUDTweaks/: HUDTweaks.sdkmod  __init__.py  pyproject.toml
NoWastedEquipmentSDK/: NoWastedEquipmentSDK.sdkmod  __init__.py  pyproject.toml
PhaseflareFix/: PhaseflareFix.sdkmod  __init__.py  pyproject.toml
PocketVehicles/: PocketVehicles.sdkmod  __init__.py  pyproject.toml
QuickSaveReload/: QuickSaveReload.sdkmod  __init__.py  pyproject.toml
command_history/: __init__.py  command_history.sdkmod  pyproject.toml
