[project]
name = "BlastJumping"
version = "1"
authors = [{ name = "Yeti" }]
description = "Enables rocket jumping and grenade jumping. Includes lots of options on strength and control."

[tool.sdkmod]
name = "Blast Jumping"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"