[project]
name = "ColdDeadHands"
version = "1.0"
authors = [{ name = "Yeti" }]
description = "Enemies use and drop real weapons."

[tool.sdkmod]
name = "Cold Dead Hands"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/ColdDeadHands/ColdDeadHands.sdkmod"
version = "1.0"
