[project]
name = "HUDTweaks"
version = "1"
authors = [{ name = "Yeti" }]
description = "Scale your HUD again."

[tool.sdkmod]
name = "HUD Tweaks"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/HUDTweaks/HUDTweaks.sdkmod"
supported_games = ["BL3"]
version = "1"
