[project]
name = "PhaseflareFix"
version = "1.1"
authors = [{ name = "Yeti" }]
description = "Disables most or all of the Phaseflare orb making it a usable action skill. Make sure to check the options in game for how much collision you want to remove."

[tool.sdkmod]
name = "Phaseflare Fix"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/PhaseflareFix/PhaseflareFix.sdkmod"
version = "1.0"
