[project]
name = "PhaseflareFix"
version = "1.5"
authors = [{ name = "Yeti" }]
description = "Disables most or all of the Phaseflare orb making it a usable action skill. Also has options for disabling the melee autoaim, Forcing it to land on the enemy its homing too, not ending in ffyl and force the height to the player height."

[tool.sdkmod]
name = "Phaseflare Fix"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/PhaseflareFix/PhaseflareFix.sdkmod"
version = "1.5"
