[project]
name = "PocketVehicles"
version = "1"
authors = [{ name = "Yeti" }]
description = "Spawn your current preset vehicle anywhere."

[tool.sdkmod]
name = "Pocket Vehicles"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/PocketVehicles/PocketVehicles.sdkmod"
supported_games = ["BL3"]
version = "1"
