[project]
name = "QuickSaveReload"
version = "1"
authors = [{ name = "Yeti" }]
description = "Hotkey to quickly save and reload your game."

[tool.sdkmod]
name = "Quick Save/Reload"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/releases/download/BL3Mods/QuickSaveReload.sdkmod"
version = "1"
supported_games = ["BL3"]
