[project]
name = "command_history"
version = "1"
authors = [{ name = "Yeti" }]
description = "Save your console history between game launches. History is saved in sdk_mods/settings/command_history."

[tool.sdkmod]
name = "Command History"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/BL3-SDK-Mods/raw/refs/heads/main/command_history/command_history.sdkmod"
version = "1"
